# emunisce

./: .arcconfig  .bazelrc  .clang-format  .gitignore  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  Emunisce.sln  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  appveyor.yml  clang-format-all.ps1  clang-tidy-all.ps1  emunisce.sln  package-lock.json  package.json  phoenix.sln  vcpkg-configuration.json  vcpkg.json
BaseApplication/: BUILD
ElectronApplication/: main.js
Gameboy/: BUILD  ChannelController.cpp  ChannelController.h  Cpu.cpp  Cpu.h  CpuExec.cpp  Display.cpp  Display.h  Display.vcxproj  DutyUnit.cpp  DutyUnit.h  EnvelopeUnit.cpp  EnvelopeUnit.h  Gameboy.cpp  Gameboy.h  Gameboy.vcxproj  Gameboy.vcxproj.filters  GameboyIncludes.h  GameboyTypes.h  Input.cpp  Input.h  Input.vcxproj  LengthUnit.cpp  LengthUnit.h  Mbc1.cpp  Mbc1.h  Mbc3.cpp  Mbc3.h  Mbc5.cpp  Mbc5.h  Memory.cpp  Memory.h  RomOnly.cpp  RomOnly.h  Sound.cpp  Sound.h  Sound.vcxproj.filters  Sound1.cpp  Sound1.h  Sound2.cpp  (+7 more)
LinuxPlatform/: BUILD  Event.cpp  Event.h  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  Timing.cpp  Timing.h
Machine/: BUILD  IEmulatedDisplay.h  IEmulatedInput.h  IEmulatedMachine.h  IEmulatedMemory.h  IEmulatedProcessor.h  IEmulatedSound.h  IMachineToApplication.h  Machine.vcxproj  Machine.vcxproj.filters  MachineFactory.cpp  MachineFactory.h  MachineIncludes.h  MachineSerialization.cpp  (+4 more)
base_application/: BUILD.bazel  CMakeLists.txt
base_application/BaseApplication/: BaseApplication.cpp  BaseApplication.vcxproj.filters  Gui.h  InputRecording.h  KingsDream.h  MachineFeature.cpp  MachineRunner.cpp  Rewinder.cpp  Rewinder.h
base_application/OpenGLRenderer/: OpenGLRenderer.cpp  OpenGLRenderer.vcxproj.filters
base_application/base_application/: BUILD  BaseApplication.cpp  BaseApplication.h  BaseApplication.vcxproj  CMakeLists.txt  CommandTrie.cpp  Gui.cpp  Gui.h  IUserInterface.h  InputManager.cpp  InputManager.h  InputRecording.cpp  InputRecording.h  KingsDream.cpp  KingsDream.h  MachineFeature.cpp  MachineFeature.h  MachineRunner.cpp  MachineRunner.h  Rewinder.cpp  Rewinder.h  base_application.cpp  base_application.h  base_application.vcxproj  base_application.vcxproj.filters  command_trie.cpp  command_trie.h  gui.cpp  gui.h  input_manager.cpp  input_manager.h  input_recording.cpp  input_recording.h  kings_dream.cpp  machine_feature.cpp  machine_feature.h  machine_runner.cpp  machine_runner.h  rewinder.cpp  rewinder.h  (+1 more)
base_application/opengl_renderer/: BUILD  CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRenderer.vcxproj  OpenGLRenderer.vcxproj.filters  glext.h  opengl_renderer.cpp  opengl_renderer.h  opengl_renderer.vcxproj
base_application/sdl_gpu_renderer/: CMakeLists.txt  sdl_gpu_renderer.cpp  sdl_gpu_renderer.h
cpu/: cpu.h  (+3 more)
gameboy/: BUILD  BUILD.bazel  CMakeLists.txt  ChannelController.cpp  ChannelController.h  Cpu.cpp  Cpu.h  Cpu.vcxproj  Cpu.vcxproj.filters  CpuExec.cpp  Display.cpp  Display.h  Display.vcxproj  Display.vcxproj.filters  DutyUnit.cpp  DutyUnit.h  EnvelopeUnit.cpp  EnvelopeUnit.h  Gameboy.cpp  Gameboy.h  Gameboy.vcxproj  Gameboy.vcxproj.filters  GameboyIncludes.h  GameboyTypes.h  Input.cpp  Input.h  Input.vcxproj  Input.vcxproj.filters  LengthUnit.cpp  LengthUnit.h  Mbc1.cpp  Mbc1.h  Mbc3.cpp  Mbc3.h  Mbc5.cpp  Mbc5.h  Memory.cpp  Memory.h  Memory.vcxproj  Memory.vcxproj.filters  (+57 more)
machine/: BUILD  BUILD.bazel  CMakeLists.txt  IEmulatedDisplay.h  IEmulatedInput.h  IEmulatedMachine.h  IEmulatedMemory.h  IEmulatedProcessor.h  IEmulatedSound.h  IMachineToApplication.h  Machine.vcxproj  Machine.vcxproj.filters  MachineFactory.cpp  MachineFactory.h  MachineIncludes.h  MachineSerialization.cpp  MachineSerialization.h  MachineTypes.h  ScreenBuffer.cpp  ScreenBuffer.h  emulated_display.h  emulated_input.h  emulated_machine.h  emulated_memory.h  emulated_processor.h  emulated_sound.h  machine_factory.cpp  machine_factory.h  machine_includes.h  machine_serialization.cpp  machine_serialization.h  machine_to_application.h  machine_types.h  screen_buffer.cpp  screen_buffer.h  t_screen_buffer.hpp
platform/: CMakeLists.txt  Platform.vcxproj  Platform.vcxproj.filters  PlatformIncludes.h  PlatformTypes.h  platform_defines.h  platform_includes.h  platform_types.h
sdl_application/emunisce/: CMakeLists.txt  console_debugger.cpp  console_debugger.h  emunisce.cpp  emunisce.h  main.cpp
sdl_application/sdl_sound/: CMakeLists.txt  sdl_sound.cpp  sdl_sound.h
utility/: BUILD  BUILD.bazel  CMakeLists.txt
utility/HqNx/: BUILD  HqNx.cpp  HqNx.h  HqNx.vcxproj  HqNx.vcxproj.filters  hq3x.cpp  hq4x.cpp
utility/Serialization/: Archive.cpp  Archive.h  FileSerializer.cpp  FileSerializer.h  ISerializer.h  MemorySerializer.h  Serialization.vcxproj.filters  SerializationIncludes.h
utility/hqnx/: BUILD.bazel  HqNx.cpp  HqNx.h
utility/hqx/: BUILD.bazel  CMakeLists.txt  hq2x.cpp  hqx.cpp  hqx.h  hqx.vcxproj  hqx.vcxproj.filters
utility/serialization/: Archive.cpp  Archive.h  BUILD.bazel  CMakeLists.txt  FileSerializer.cpp  FileSerializer.h  ISerializer.h  MemorySerializer.cpp  MemorySerializer.h  Serialization.vcxproj  SerializeItem.cpp  SerializeItem.h  archive.cpp  archive.h  file_serializer.cpp  file_serializer.h  memory_serializer.cpp  memory_serializer.h  serialization.vcxproj  serialization.vcxproj.filters  serialization_includes.h  serialize_item.cpp  serialize_item.h
windows_application/emunisce/: BUILD.bazel  CMakeLists.txt  ConsoleDebugger.cpp  ConsoleDebugger.h  Emunisce.cpp  Emunisce.h  Emunisce.vcxproj  Emunisce.vcxproj.filters  Main.cpp  console_debugger.cpp  console_debugger.h  emunisce.cpp  emunisce.h  main.cpp
windows_application/gdi_plus_renderer/: BUILD  CMakeLists.txt  GdiPlusRenderer.cpp  GdiPlusRenderer.vcxproj  GdiPlusRenderer.vcxproj.filters  gdi_plus_renderer.cpp  gdi_plus_renderer.h  gdi_plus_renderer.vcxproj.filters
windows_application/wave_out_sound/: BUILD  CMakeLists.txt  WaveOutSound.cpp  WaveOutSound.h  WaveOutSound.vcxproj  wave_out_sound.cpp  wave_out_sound.h  wave_out_sound.vcxproj  wave_out_sound.vcxproj.filters
(+629 files in other folders)
