# Platform detection
config_setting(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows",
    constraint_values = [
        "@platforms//os:windows",
    ],
    visibility = ["//visibility:public"],
)

# Alias for the core emulator library (machine + gameboy)
alias(
    name = "emunisce_core",
    actual = "//machine:machine",
    visibility = ["//visibility:public"],
)
