###############################################################################
# Emunisce - Game Boy Emulator
# Bazel Module Configuration (Bzlmod)
###############################################################################

module(
    name = "emunisce",
    version = "1.0.0",
)

# Required for platform detection and C++ toolchain
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
