cc_library(
    name = "machine",
    visibility = ["//visibility:public"],

    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h", "*.hpp"]),

    deps = [
        "//platform:platform",
        "//utility:utility",
        "//gameboy:gameboy",
    ],
    includes = ["."],
)

cc_library(
    name = "machine_interfaces",
    visibility = ["//visibility:public"],

    hdrs = [
        "MachineIncludes.h",
        "MachineTypes.h",

        "MachineFactory.h",
        "MachineSerialization.h",

        "IMachineToApplication.h",

        "IEmulatedMachine.h",
        "IEmulatedDisplay.h",
        "IEmulatedInput.h",
        "IEmulatedMemory.h",
        "IEmulatedProcessor.h",
        "IEmulatedsound.h",

        "ScreenBuffer.h",
    ],

    includes = ["."],
)